Settings: Add high touch sensitivity and touchscreen hovering toggles
Author: Bruno Martins <bgcngm@gmail.com>
Date:   Tue Mar 26 00:06:11 2019 +0000

    DisplaySettings: Hide high touch sensitivity from search if needed

     * Fixes: https://gitlab.com/LineageOS/issues/android/issues/260

    Change-Id: I98ce66dec9801c36da5a2facd6b033895b7963f0

Author: Bruno Martins <bgcngm@gmail.com>
Date:   Tue Mar 26 00:20:37 2019 +0000

    LanguageAndInputSettings: Hide touch hovering from search if needed

    Change-Id: I5d53946262919ff67be5e777654af2171ffd2a44

Change-Id: Ib8712d2d0c0fe4396dbea7c7fc130e0c253d3207

--- a/res/values-af/strings.xml
+++ b/res/values-af/strings.xml
@@ -5096,7 +5096,7 @@
       <item quantity="other">Kameraprogramme</item>
       <item quantity="one">Kameraprogram</item>
     </plurals>
-    <string name="default_calendar_app_title" msgid="1870095225089706093">"Kalenderprogram"</string>
+    <string name="default_calendar_app_title" msgid="1870095225089706093">"Kalenaxiomrogram"</string>
     <string name="default_contacts_app_title" msgid="7740028900741944569">"Kontakteprogram"</string>
     <plurals name="default_email_app_title" formatted="false" msgid="8338194872609410234">
       <item quantity="other">E-poskliëntprogramme</item>
